--- a/package.json
+++ b/package.json
@@ -15,81 +15,82 @@
   "license": "MIT",
   "repository": "github:linkedpipes/dcat-ap-viewer",
   "dependencies": {
-    "@babel/cli": "^7.14.3",
-    "@babel/core": "^7.14.3",
+    "@babel/cli": "^7.17.3",
+    "@babel/core": "^7.17.5",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.14.2",
-    "@babel/preset-react": "^7.13.13",
-    "@types/history": "^4.7.8",
-    "@types/jsonld": "^1.5.5",
-    "@types/randomcolor": "^0.5.5",
-    "@types/react": "^17.0.6",
-    "@types/react-dom": "^17.0.5",
-    "@types/react-helmet": "^6.1.1",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^5.1.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/history": "^4.7.11",
+    "@types/jsonld": "^1.5.6",
+    "@types/randomcolor": "^0.5.6",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.5",
+    "@types/react-redux": "^7.1.22",
+    "@types/react-router-dom": "^5.3.3",
     "@types/reactstrap": "^8.7.2",
-    "babel-loader": "^8.2.2",
-    "bootstrap": "^5.0.1",
-    "browserslist": "^4.16.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^8.1.1",
-    "core-js": "^3.12.1",
+    "babel-loader": "^8.2.3",
+    "bootstrap": "^5.1.3",
+    "browserslist": "^4.19.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^10.2.4",
+    "core-js": "^3.21.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.4",
-    "css-minimizer-webpack-plugin": "3.0.0",
+    "css-loader": "^6.6.0",
+    "css-minimizer-webpack-plugin": "3.4.1",
     "es6-promise": "^4.2.8",
-    "express": "^4.17.1",
-    "helmet": "^4.6.0",
-    "history": "^5.0.0",
-    "html-webpack-plugin": "^5.3.1",
+    "express": "^4.17.3",
+    "helmet": "^5.0.2",
+    "history": "^5.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "isomorphic-fetch": "^3.0.0",
     "jsonld": "^5.2.0",
-    "mini-css-extract-plugin": "^1.6.0",
-    "prop-types": "^15.7.2",
-    "query-string": "^7.0.0",
+    "mini-css-extract-plugin": "^2.5.3",
+    "prop-types": "^15.8.1",
+    "query-string": "^7.1.1",
     "randomcolor": "^0.6.2",
     "react": "^17.0.2",
-    "react-bootstrap-typeahead": "^5.1.4",
+    "react-bootstrap-typeahead": "^5.2.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-intl": "^5.17.7",
-    "react-redux": "^7.2.4",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-tagcloud": "^2.1.1",
-    "reactstrap": "^9.0.0-0",
-    "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0",
+    "react-intl": "^5.24.6",
+    "react-redux": "^7.2.6",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
+    "react-tagcloud": "^2.2.0",
+    "reactstrap": "^9.0.1",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "request": "^2.88.2",
-    "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.1.2",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.1",
     "thunk": "0.0.1",
-    "ts-loader": "^8.3.0",
+    "ts-loader": "^9.2.6",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^4.2.4",
-    "webpack": "^5.37.1",
-    "webpack-merge": "^5.7.3",
-    "winston": "^3.3.3",
+    "typescript": "^4.5.5",
+    "webpack": "^5.69.1",
+    "webpack-merge": "^5.8.0",
+    "winston": "^3.6.0",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.26.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.23.2",
-    "eslint-plugin-jest": "^24.3.6",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^26.6.3",
+    "@types/jest": "^27.4.0",
+    "babel-jest": "^27.5.1",
+    "eslint": "^8.9.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "jest": "^27.5.1",
     "react-hot-loader": "^4.13.0",
-    "ts-jest": "^26.5.6",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-middleware": "^4.2.0",
-    "webpack-hot-middleware": "^2.25.0"
+    "ts-jest": "^27.1.3",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-middleware": "^5.3.1",
+    "webpack-hot-middleware": "^2.25.1"
   }
 }
