--- a/package.json
+++ b/package.json
@@ -15,82 +15,81 @@
   "license": "MIT",
   "repository": "github:linkedpipes/dcat-ap-viewer",
   "dependencies": {
-    "@babel/cli": "^7.17.3",
-    "@babel/core": "^7.17.5",
-    "@babel/eslint-parser": "^7.17.0",
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/history": "^4.7.11",
-    "@types/jsonld": "^1.5.6",
-    "@types/randomcolor": "^0.5.6",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-helmet": "^6.1.5",
-    "@types/react-redux": "^7.1.22",
+    "@types/jsonld": "^1.5.8",
+    "@types/randomcolor": "^0.5.7",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-helmet": "^6.1.6",
+    "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "@types/reactstrap": "^8.7.2",
-    "babel-loader": "^8.2.3",
-    "bootstrap": "^5.1.3",
-    "browserslist": "^4.19.3",
+    "babel-loader": "^9.1.2",
+    "bootstrap": "^5.2.3",
+    "browserslist": "^4.21.5",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^10.2.4",
-    "core-js": "^3.21.1",
+    "copy-webpack-plugin": "^11.0.0",
+    "core-js": "^3.27.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.6.0",
-    "css-minimizer-webpack-plugin": "3.4.1",
+    "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "4.2.2",
     "es6-promise": "^4.2.8",
-    "express": "^4.17.3",
-    "helmet": "^5.0.2",
-    "history": "^5.2.0",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "history": "^5.3.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "isomorphic-fetch": "^3.0.0",
-    "jsonld": "^5.2.0",
-    "mini-css-extract-plugin": "^2.5.3",
+    "jsonld": "^8.1.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "prop-types": "^15.8.1",
-    "query-string": "^7.1.1",
+    "query-string": "^8.1.0",
     "randomcolor": "^0.6.2",
-    "react": "^17.0.2",
-    "react-bootstrap-typeahead": "^5.2.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-bootstrap-typeahead": "^6.0.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-intl": "^5.24.6",
-    "react-redux": "^7.2.6",
-    "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1",
-    "react-tagcloud": "^2.2.0",
-    "reactstrap": "^9.0.1",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
+    "react-intl": "^6.2.8",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.8.1",
+    "react-router-dom": "^6.8.1",
+    "react-tagcloud": "^2.3.1",
+    "reactstrap": "^9.1.5",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "request": "^2.88.2",
     "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.1",
-    "thunk": "0.0.1",
-    "ts-loader": "^9.2.6",
+    "terser-webpack-plugin": "^5.3.6",
+    "ts-loader": "^9.4.2",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^4.5.5",
-    "webpack": "^5.69.1",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
     "webpack-merge": "^5.8.0",
-    "winston": "^3.6.0",
-    "yaml": "^1.10.2"
+    "winston": "^3.8.2",
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "babel-jest": "^27.5.1",
-    "eslint": "^8.9.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-webpack-plugin": "^3.1.1",
-    "jest": "^27.5.1",
-    "react-hot-loader": "^4.13.0",
-    "ts-jest": "^27.1.3",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-middleware": "^5.3.1",
-    "webpack-hot-middleware": "^2.25.1"
+    "@reduxjs/toolkit": "^1.9.2",
+    "@types/jest": "^29.4.0",
+    "babel-jest": "^29.4.2",
+    "eslint": "^8.34.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^4.0.0",
+    "jest": "^29.4.2",
+    "ts-jest": "^29.0.5",
+    "webpack-bundle-analyzer": "^4.7.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-middleware": "^6.0.1",
+    "webpack-hot-middleware": "^2.25.3"
   }
 }
